# VANTA

./: .gitignore  README.md  index.html  package.json
datagrabber/: README.md  background.js  manifest.json  popup.css  popup.html  popup.js
src/: App.tsx  store.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: api.rs  commands.rs  config.rs  downloader.rs  downloads.rs  lib.rs  library.rs  main.rs
src/components/: AnalyzeModal.tsx  CommandPalette.tsx  ContextMenu.tsx  DuplicatesModal.tsx  ErrorBoundary.tsx  KeyboardHelp.tsx  Lightbox.tsx  LockScreen.tsx  NavRail.tsx  PinModal.tsx  Thumb.tsx  TitleBar.tsx  Toasts.tsx  VideoThumb.tsx
src/lib/: api.ts  format.ts
src/screens/: Downloads.tsx  Gallery.tsx  Home.tsx  Insights.tsx  Library.tsx  Settings.tsx
